# nn

./: .gitignore  CMakeLists.txt  Common.h  Net.cpp  Utils.h  main.cpp
libnn/: CMakeLists.txt
libnn/include/nn/: Net.h  Utils.h
libnn/src/: Net.cpp
libnn/test/: main.cpp
